--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,114 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
-
+@import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&display=swap");
+body {
+  font-family: "Red Rose";
+}
+html {
+  font-size: 100%;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-nav {
+    @apply focus:outline-none w-[170px] h-[48px] bg-color_primary rounded-xl text-white;
+  }
+
+  .clamp {
+    font-size: clamp(1.3rem, 3vw, 1.5rem);
+  }
+
+  .clamp2 {
+    font-size: clamp(1.5rem, 5vw, 2.25rem);
+  }
+
+  .hamburger {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    transition: all 0.25s;
+    position: relative;
+  }
+
+  .hamburger-top,
+  .hamburger-middle,
+  .hamburger-bottom {
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    top: 0;
+    left: 0;
+    background: black;
+    transform: rotate(0);
+    transition: all 0.5s;
+  }
+
+  .hamburger-middle {
+    transform: translateY(7px);
+  }
+
+  .hamburger-bottom {
+    transform: translateY(14px);
+  }
+
+  .open .hamburger-top {
+    transform: rotate(45deg) translateY(6px) translateX(6px);
+  }
+
+  .open .hamburger-middle {
+    display: none;
+  }
+
+  .open .hamburger-bottom {
+    transform: rotate(-45deg) translateY(6px) translateX(-6px);
+  }
+
+  .learn-more-gradient {
+    background: linear-gradient(90deg, #a02279 11.45%, #a02279 11.45%);
+  }
+
+  .shadow {
+    width: 200px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 50%; /* This makes it oval */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adjust the spread and blur for the shadow effect */
+    overflow: hidden;
+
+    animation: shadow-animation 6s ease-in-out infinite;
+  }
+}
+
+.floating-img {
+  animation: floating-animation 6s ease-in-out infinite;
+}
+
+@keyframes floating-animation {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+@keyframes shadow-animation {
+  0% {
+    transform: scale(0.5) translateX(20px);
+    opacity: 0.4;
+  }
+  50% {
+    transform: scale(1) translateX(20px);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(0.5) translateX(20px);
+    opacity: 0.4;
+  }
+}
